--- a/cnc_cutting/tasks/index.html
+++ b/cnc_cutting/tasks/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <!-- Navbar CSS -->
     <link rel="stylesheet" href="../../components/navbar.css">
+    <!-- Timer Widget CSS -->
+    <link rel="stylesheet" href="../../components/timerWidget.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
 </head>
 <body>
@@ -26,5 +28,7 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="task.js"></script>
+    <!-- Timer Widget -->
+    <script type="module" src="../../components/timerWidgetInit.js"></script>
 </body>
 </html>
