--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="main.js"></script>
+    <!-- Timer Widget -->
+    <script type="module" src="components/timerWidgetInit.js"></script>
 </body>
 </html> 
