--- a/machining/tasks/index.html
+++ b/machining/tasks/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../components/navbar.css">
     <link rel="stylesheet" href="../../components/timerWidget.css">
     <link rel="stylesheet" href="../../components/taskTimerModals.css">
+    <link rel="stylesheet" href="../../components/confirmation-modal/confirmation-modal.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
     <link rel="stylesheet" href="../../pre-auth.css">
 </head>
@@ -178,45 +179,9 @@
         </div>
     </div>
 
-    <!-- Machine Status Modal -->
-    <div id="machine-status-modal" class="modal-overlay">
-        <div class="modal-backdrop" id="machine-status-modal-backdrop"></div>
-        <div class="modal-container">
-            <div class="modal-header">
-                <h3><i class="fas fa-question-circle me-2"></i>Makine Durumu</h3>
-                <button class="modal-close" id="machine-status-modal-close">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p>Makine çalışır durumda mı?</p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" id="machine-status-no">
-                    <i class="fas fa-times me-2"></i>Hayır
-                </button>
-                <button class="btn btn-primary" id="machine-status-yes">
-                    <i class="fas fa-check me-2"></i>Evet
-                </button>
-            </div>
-        </div>
-    </div>
 
-    <!-- Redirect Warning Modal -->
-    <div id="redirect-warning-modal" class="modal-overlay">
-        <div class="modal-backdrop" id="redirect-warning-modal-backdrop"></div>
-        <div class="modal-container">
-            <div class="modal-header">
-                <h3><i class="fas fa-exclamation-triangle me-2"></i>Yönlendirme Uyarısı</h3>
-            </div>
-            <div class="modal-body">
-                <p>Makine çalışmıyor olarak işaretlendi. Bekletme sayfasına yönlendirileceksiniz.</p>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" id="redirect-warning-ok">
-                    <i class="fas fa-check me-2"></i>Tamam
-                </button>
-            </div>
-        </div>
-    </div>
+    <!-- Confirmation Modal Container -->
+    <div id="confirmation-modal-container"></div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
