--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../components/navbar.css">
     <link rel="stylesheet" href="../components/header/header.css">
     <link rel="stylesheet" href="../components/menu/menu.css">
+    <link rel="stylesheet" href="../components/timerWidget.css">
     <link rel="icon" type="image/png" href="../images/gemkom.png">
 </head>
 <body>
@@ -30,5 +31,7 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="maintenance.js"></script>
+    <!-- Timer Widget -->
+    <script type="module" src="../components/timerWidgetInit.js"></script>
 </body>
 </html>
