--- a/maintenance/list/index.html
+++ b/maintenance/list/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../../components/refreshButton.css">
     <link rel="stylesheet" href="../../components/header/header.css">
+    <link rel="stylesheet" href="../../components/timerWidget.css">
     <link rel="stylesheet" href="list.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
 </head>
@@ -104,5 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../../components/refreshButton.js"></script>
     <script type="module" src="list.js"></script>
+    <!-- Timer Widget -->
+    <script type="module" src="../../components/timerWidgetInit.js"></script>
 </body>
 </html>
