--- a/warehouse/weight-reduction/index.html
+++ b/warehouse/weight-reduction/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../../components/file-attachments/file-attachments.css">
     <link rel="stylesheet" href="../../components/file-viewer/file-viewer.css">
+    <link rel="stylesheet" href="../../components/timerWidget.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
 </head>
 <body>
@@ -41,5 +42,7 @@
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="weight-reduction.js"></script>
+    <!-- Timer Widget -->
+    <script type="module" src="../../components/timerWidgetInit.js"></script>
 </body>
 </html>
