--- a/cnc_cutting/tasks/index.html
+++ b/cnc_cutting/tasks/index.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="../../components/navbar.css">
     <!-- Timer Widget CSS -->
     <link rel="stylesheet" href="../../components/timerWidget.css">
+    <!-- Task Timer Modals CSS -->
+    <link rel="stylesheet" href="../../components/taskTimerModals.css">
+    <!-- Tasks CSS (modal styles) -->
+    <link rel="stylesheet" href="tasks.css">
+    <!-- Confirmation Modal CSS -->
+    <link rel="stylesheet" href="../../components/confirmation-modal/confirmation-modal.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
 </head>
 <body>
@@ -24,6 +30,41 @@
 
     <!-- Timer Page Container -->
     <div id="timer-page-container"></div>
+
+    <!-- Confirmation Modal Container -->
+    <div id="confirmation-modal-container"></div>
+
+    <!-- Manual Time Modal -->
+    <div id="manual-time-modal" class="modal-overlay">
+        <div class="modal-backdrop" id="manual-time-modal-backdrop"></div>
+        <div class="modal-container">
+            <div class="modal-header">
+                <h3><i class="fas fa-clock me-2"></i>Manuel Zaman Girişi</h3>
+                <button class="modal-close" id="manual-time-modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <label for="start-datetime">Başlangıç Tarihi ve Saati:</label>
+                    <input type="datetime-local" id="start-datetime" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="end-datetime">Bitiş Tarihi ve Saati:</label>
+                    <input type="datetime-local" id="end-datetime" class="form-control" required>
+                </div>
+                <div class="time-preview">
+                    <strong>Toplam Süre: <span id="duration-preview">00:00:00</span></strong>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" id="manual-time-modal-cancel">
+                    <i class="fas fa-times me-2"></i>İptal
+                </button>
+                <button class="btn btn-primary" id="manual-time-modal-submit">
+                    <i class="fas fa-save me-2"></i>Kaydet
+                </button>
+            </div>
+        </div>
+    </div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
