--- a/warehouse/inventory-allocation/index.html
+++ b/warehouse/inventory-allocation/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../../components/table/table.css">
     <link rel="stylesheet" href="../../components/genericCard/genericCard.css">
     <link rel="stylesheet" href="../../components/timerWidget.css">
+    <link rel="stylesheet" href="../../components/confirmation-modal/confirmation-modal.css">
     <link rel="icon" type="image/png" href="../../images/gemkom.png">
 </head>
 <body>
@@ -37,6 +38,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Confirmation Modal Container -->
+    <div id="confirmation-modal-container"></div>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
