--- a/warehouse/inventory-allocation/index.html
+++ b/warehouse/inventory-allocation/index.html
@@ -34,6 +34,9 @@
                     
                     <!-- Results Table Container -->
                     <div id="results-container"></div>
+                    
+                    <!-- Warehouse Requests Container -->
+                    <div id="warehouse-requests-container"></div>
                 </div>
             </div>
         </div>
